@@ -3,55 +3,82 @@ package ru.yandex.practicum.filmorate.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dal.storage.GenreStorage;
+import ru.yandex.practicum.filmorate.dal.storage.LikesStorage;
+import ru.yandex.practicum.filmorate.dto.film.NewFilmRequest;
+import ru.yandex.practicum.filmorate.dto.film.UpdateFilmRequest;
+import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import ru.yandex.practicum.filmorate.mapper.FilmMapper;
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.storage.FilmStorage;
-import ru.yandex.practicum.filmorate.storage.UserStorage;
+import ru.yandex.practicum.filmorate.dal.storage.FilmStorage;
+import ru.yandex.practicum.filmorate.validator.FilmValidator;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class FilmService {
     private final FilmStorage filmStorage;
-    private final UserStorage userStorage;
+    private final GenreStorage genreStorage;
+    private final LikesStorage likesStorage;
 
-    public Film addFilm(Film film) {
-        return filmStorage.addFilm(film);
+    public List<Film> getFilms() {
+        List<Film> films = filmStorage.getFilms();
+        genreStorage.setGenresOfListFilms(films);
+        likesStorage.setLikesOfListFilms(films);
+        return films;
     }
 
-    public Film updateFilm(Film film) {
-        return filmStorage.updateFilm(film);
+    public Film getFilmById(long filmId) {
+        Film film = filmStorage.getFilmById(filmId);
+        if (film == null) {
+            throw new NotFoundException("Фильм с таким id не найден");
+        }
+        film.setGenres(genreStorage.getFilmGenres(filmId));
+        film.setLikes(likesStorage.getFilmLikes(film.getId()));
+        return film;
     }
 
-    public Collection<Film> getFilms() {
-        return filmStorage.getFilms();
+    public Film addFilm(NewFilmRequest request) {
+        Film film = FilmMapper.mapToFilm(request);
+        filmStorage.addFilm(film);
+        return film;
     }
 
-    public void addLike(Long filmId, Long userId) {
+    public Film updateFilm(UpdateFilmRequest request) {
+        Film film = filmStorage.getFilmById(request.getId());
+        if (film == null) {
+            throw new NotFoundException("Фильм с таким id не найден");
+        }
+        FilmValidator.validateFilm(film);
+        return filmStorage.updateFilm(FilmMapper.updateFilmFields(film, request));
+    }
+
+    public void addLike(long filmId, long userId) {
         log.info("addLike() - получен запрос от пользователя с id {} на добавление лайка фильму с id {}",
                 userId, filmId);
-        userStorage.getUser(userId); // для проверки, что id содержится в мапе и значение не равно null
-        filmStorage.getFilm(filmId).getLikes().add(userId);
+        filmStorage.addLike(filmId, userId);
         log.info("addLike() - выполнен запрос от пользователя с id {} на добавление лайка фильму с id {}",
                 userId, filmId);
     }
 
-    public void deleteLike(Long filmId, Long userId) {
+    public void deleteLike(long filmId, long userId) {
         log.info("deleteLike() - получен запрос от пользователя с id {} на удаление лайка у фильма с id {}",
                 userId, filmId);
-        userStorage.getUser(userId); // для проверки, что id содержится в мапе и значение не равно null
-        filmStorage.getFilm(filmId).getLikes().remove(userId);
+        filmStorage.deleteLike(filmId, userId);
         log.info("deleteLike() - выполнен запрос от пользователя с id {} на удаление лайка у фильма с id {}",
                 userId, filmId);
     }
 
-    public Collection<Film> getPopularFilms(int count) {
+    public List<Film> getPopularFilms(int count) {
         log.info("getPopularFilms() - получен запрос на получение популярных фильмов");
-        return filmStorage.getFilms().stream()
-                .sorted((f1, f2) -> f2.getLikes().size() - f1.getLikes().size())
-                .limit(count)
-                .collect(Collectors.toList());
+        List<Film> films = filmStorage.getPopularFilms(count).stream()
+                // сортируем по убыванию лайков
+                .sorted((f1, f2) -> Integer.compare(f2.getLikes().size(), f1.getLikes().size()))
+                .toList();
+        genreStorage.setGenresOfListFilms(films);
+        likesStorage.setLikesOfListFilms(films);
+        return films;
     }
 }
